# ChiefBeef

./: .gitignore  README.md  frames_2024-10-20_13.59.34.gv
map_data/: map_data_0.db3
map_data_again_test1/: map_data_again_test1_0.db3  metadata.yaml
map_data_again_test2/: map_data_again_test2_0.db3
src/GUI/: README.md
src/apriltag_ros/: CMakeLists.txt
src/apriltag_ros/cfg/: tags_36h11.yaml
src/apriltag_ros/include/: AprilTagNode.hpp
src/apriltag_ros/launch/: tag_16h5_all.launch.py  tagdetection.launch.py  v4l2_36h11.launch.py
src/apriltag_ros/src/: AprilTagNode.cpp
src/camera_vision/: README.md
src/explore/: CMakeLists.txt  package.xml
src/explore/config/: explore_params.yaml  params.yaml  params_not_working.yaml  slam_params.yaml
src/explore/include/explore/: delay.hpp  dummy.hpp  lidar.h  state.hpp  teleop.hpp
src/explore/launch/: explore.launch.py  lidartest.launch.py  slam.launch.py  state.launch.py
src/explore/src/: costmap_client.cpp  delay.cpp  dummy.cpp  explore.cpp  lidar.cpp  state.cpp  teleop.cpp
src/gui/: CMakeLists.txt  CMakeListsMap.txt  README.md  package.xml
src/gui/Textures/: verify_photo.py
src/gui/include/: Animation.hpp  Button.hpp  Credits.hpp  GameMap.hpp  ItemLogger.hpp  MainMenu.hpp  Map.hpp  Window.hpp  constants.hpp
src/gui/src/: Animation.cpp  Button.cpp  Credits.cpp  GameMap.cpp  ItemLogger.cpp  MainMenu.cpp  Map.cpp  Window.cpp  main.cpp
src/gui/tests/live_test/: metadata.yaml
src/gui/tests/map_data/: metadata.yaml
src/gui/tests/map_data_open/: map_data_open_0.db3  metadata.yaml
src/slam/: CMakeLists.txt  README.md  package.xml
src/slam/config/: explore.yaml
src/slam/launch/: node_launch.launch.py  slam.launch.py
src/turtlebot_control/: README.md
tests/gazebo/: CMakeLists.txt  package.xml
tests/gazebo/launch/: launch.launch.py  robot_state_publisher.launch.py  spawn_turtlebot3.launch.py
tests/gazebo/models/turtlebot3_burger/: model-1_4.sdf  model.sdf
tests/gazebo/urdf/: turtlebot3_burger.urdf
tests/gazebo/worlds/Double-Box-New-Tags/: model.config  model.sdf
tests/gazebo/worlds/Simple-Box/: model.config
tests/gazebo/worlds/Two-Shapes-of-Box/: model.config  model.sdf
tests/map_data_again_test2/: metadata.yaml
tests/map_double_blocks_v0/: map_double_blocks_v0_0.db3  metadata.yaml
worlds/Double-Box/: model.config  model.sdf
worlds/Simple-Box/: model.sdf
worlds/Two-Shapes-of--Box/: model.config  model.sdf
