<?xml version="1.0"?>
<package format="2">
  <name>tutorial_pkg</name>
  <version>0.0.1</version>
  <description>Package for exploring and mapping a maze using ROS 2</description>
  <maintainer email="your_email@example.com">James Hocking</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav2_bringup</depend>
  <depend>explore_lite</depend>
  <depend>slam_toolbox</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
